force-app/main/default/objects/DD_Claim__c/DD_Claim__c.object-meta.xml
<CustomObject>
    <description>Master dental claim record</description>
    <label>Dental Claim</label>
    <nameField><displayFormat>CLM-{000000}</displayFormat><label>Claim Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Dental Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>