force-app/main/default/objects/DD_Claim__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipLabel>Claims as Member</relationshipLabel><relationshipName>Claims_Member</relationshipName><required>true</required>
    <description>Member person account</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>