force-app/main/default/objects/DD_Claim__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>DD_Policy__c</referenceTo><relationshipLabel>Claims</relationshipLabel><relationshipName>Claims_Policy</relationshipName><required>false</required>
    <description>Associated policy</description>
</CustomField>