force-app/main/default/objects/DD_Claim__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <type>Text</type>
    <length>255</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Rendering provider</description>
</CustomField>