force-app/main/default/objects/DD_Claim__c/fields/Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Provider_NPI__c</fullName>
    <label>Provider NPI</label>
    <type>Text</type>
    <length>10</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>National Provider Identifier</description>
</CustomField>