force-app/main/default/objects/DD_Claim__c/fields/Total_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowed__c</fullName>
    <label>Total Allowed</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Allowed per fee schedule</description>
</CustomField>