force-app/main/default/objects/DD_Claim__c/fields/Total_Charged__c.field-meta.xml
<CustomField>
    <fullName>Total_Charged__c</fullName>
    <label>Total Charged</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Provider billed amount</description>
</CustomField>