force-app/main/default/objects/DD_Claim__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <label>Total Paid</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Amount paid by Delta Dental</description>
</CustomField>