force-app/main/default/objects/DD_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Policy__c</columns>
    <columns>Status__c</columns>
    <columns>Date_of_Service__c</columns>
    <columns>Total_Paid__c</columns>
</ListView>